Added data split netowrk and updated results display

--- a/collab/BasicDataSplitNetwork.ipynb
+++ b/collab/BasicDataSplitNetwork.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Partition(object):\n",
-    "    \n",
+    "class Partion(object):\n",
+    "\n",
     "    def __init__(self, data, index):\n",
     "        self.data = data\n",
     "        self.index = index\n",
@@ -42,52 +42,56 @@
     "        data_idx = self.index[index]\n",
     "        return self.data[data_idx]\n",
     "\n",
+    "transform_train = transforms.Compose([\n",
+    "    transforms.RandomResizedCrop(244),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "])\n",
+    "\n",
+    "transform_test = transforms.Compose([\n",
+    "    transforms.RandomResizedCrop(224),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "])\n",
+    "\n",
     "class DataPartitioner(object):\n",
     "\n",
-    "    def __init__(self, data, sizes, seed = 8675309):\n",
+    "    def __init__(self, data, seed = 8675309):\n",
     "        self.data = data\n",
-    "        self.partions = []\n",
+    "        self.partitions = []\n",
+    "        \n",
+    "        # todo generalize this\n",
+    "        p1_indexes, p2_indexes = [], []\n",
+    "        for idx in range(len(data)):\n",
+    "            if data[idx][1] < 5:\n",
+    "                p1_indexes.append(idx)\n",
+    "            else:\n",
+    "                p2_indexes.append(idx)\n",
+    "\n",
     "        rng = Random()\n",
     "        rng.seed(seed)\n",
-    "        data_len = len(data)\n",
-    "        indexes = [x for x in range(0, data_len)]\n",
-    "        rng.shuffle(indexes)\n",
+    "        rng.shuffle(p1_indexes)\n",
+    "        rng.shuffle(p2_indexes)\n",
     "\n",
-    "        for frac in sizes:\n",
-    "            part_len = int(frac * data_len)\n",
-    "            self.partions.append(indexes[0:part_len])\n",
-    "            indexes = indexes[part_len:]\n",
+    "        self.partitions.append(p1_indexes)\n",
+    "        self.partitions.append(p2_indexes)\n",
     "\n",
     "    def use(self, partion):\n",
-    "        return Partition(self.data, self.partions[partion])\n",
+    "        return Partion(self.data, self.partitions[partion])\n",
     "\n",
-    "def partition_dataset(testing = False):\n",
-    "    transform_train = transforms.Compose([\n",
-    "            transforms.RandomResizedCrop(244),\n",
-    "            transforms.RandomHorizontalFlip(),\n",
-    "            transforms.ToTensor(),\n",
-    "            transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
-    "        ])\n",
+    "def partition_dataset(world_size, train = True):\n",
     "\n",
+    "    dataset = datasets.CIFAR10('./data', download = True, \n",
+    "       train = train, \n",
+    "       transform = (transform_train if train else transform_test))\n",
     "\n",
-    "    transform_test = transforms.Compose([\n",
-    "        transforms.RandomResizedCrop(224),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
-    "    ])\n",
-    "\n",
-    "    dataset = datasets.CIFAR10('./data', download = True, train = (not testing), \n",
-    "        transform = (transform_train if not testing else transform_test))\n",
-    "\n",
-    "    size = dist.get_world_size()\n",
-    "    bsz = BATCH_SIZE // float(size)\n",
-    "    partition_sizes = [1.0 / size for _ in range(size)]\n",
-    "    partition = DataPartitioner(dataset, partition_sizes)\n",
+    "    partition = DataPartitioner(dataset)\n",
     "    partition = partition.use(dist.get_rank())\n",
-    "    train_set = torch.utils.data.DataLoader(partition,\n",
-    "                                         batch_size=int(bsz),\n",
-    "                                         shuffle=True)\n",
-    "    return train_set, bsz\n",
+    "    train_set = torch.utils.data.DataLoader(partition, \n",
+    "                                        batch_size = 64, \n",
+    "                                        shuffle = True)\n",
+    "    return train_set, 64\n",
     "\n",
     "def average_gradients(model):\n",
     "    size = float(dist.get_world_size())\n",
