--- a/collab/GanStyleTraining.ipynb
+++ b/collab/GanStyleTraining.ipynb
@@ -97,12 +97,12 @@
     "    size = float(dist.get_world_size())\n",
     "    for param in model.parameters():\n",
     "\n",
-    "        other_model_param = torch.zeros(1)\n",
+    "        other_model_param = torch.zeros(list(param.shape))\n",
     "        # pass to rank 1\n",
     "        if rank == 0:\n",
     "            dist.send(param.grad.data, dst = 1)\n",
     "        else:\n",
-    "            dist.recv(tenosr = other_model_param, src = 0)\n",
+    "            dist.recv(tensor = other_model_param, src = 0)\n",
     "\n",
     "        # pass to rank 0\n",
     "        if rank == 0:\n",
@@ -110,7 +110,7 @@
     "        else:\n",
     "            dist.send(param.grad.data, dst = 1)\n",
     "\n",
-    "        param.grad.data = torch.log(param.grad.data) - torch.log(1 - param.grad.data)"
+    "        param.grad.data = torch.log(param.grad.data) - torch.log(1 - other_model_param)"
    ]
   },
   {
